# leptos-template

./: .gitignore  Cargo.toml  README.md  package.json  tailwind.config.js
.github/workflows/: e2e.yaml  e2e.yml  fmt.yaml  prettier.yaml
app/: Cargo.toml
app/src/: database.rs  error_template.rs  lib.rs  live.rs
app/src/envs/: dev.rs  mod.rs  prod.rs
app/src/wallet/: mod.rs  wallet.js
end2end/: package.json  playwright.config.ts
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: fileserv.rs  main.rs
