[package]
name = "app"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
http.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
leptos.workspace = true
serde = { workspace = true, features = ["derive"] }
surrealdb = { workspace = true, features = ["kv-mem"] }
tailwind_fuse = { workspace = true, features = ["variant"] }
thiserror.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]
prod = []
