[package]
name = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { workspace = true, features = [ "ssr" ] }
axum.workspace = true
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true
log.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
