[package]
name = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { workspace = true, features = ["ssr"] }
axum.workspace = true
cfg-if.workspace = true
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
surrealdb = { workspace = true, features = ["kv-mem"] }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
tracing.workspace = true
thiserror.workspace = true

[features]
prod = ["app/prod"]
